--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
     <span class="title">CI/CD IS LAJF!</span>
     <img src="lemon_deepfry.png" />
+    <span class="title">HEJ!</span>
 </body>
 </html>
